--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "angular-cli-ghpages": "^1.0.6",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
     "rxjs": "~7.5.0",
-    "sweetalert2": "^11.7.12"
+    "sweetalert2": "^11.7.12",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.6",
